reset to working version